# conduit

./: CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-26-conduit-implementation.md
docs/superpowers/specs/: 2026-03-26-conduit-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs  state.rs  tray.rs
src-tauri/src/provider/: mod.rs  pritunl.rs  tailscale.rs  warp.rs  wireguard.rs
src-tauri/src/util/: detect.rs  exec.rs  mod.rs
src/lib/: tauri.ts  types.ts
src/lib/components/: ActivityLog.svelte  ConfigPanel.svelte  SettingsPanel.svelte  StatusDot.svelte  Toggle.svelte  UpdateBanner.svelte  VpnCard.svelte
src/lib/stores/: vpn.ts
src/routes/: +page.svelte
